<resources>
    <string name="app_name">COVID-19 Italia</string>
    <string name="info">Informazioni</string>
    <string name="infoMessage">
        Questa applicazione ha il solo scopo di informare i cittadini e mettere a disposizione i dati raccolti relativi alla diffusione del virus COVID-19 in Italia per scopi comunicativi, di informazione e di analisi.
        I dati visualizzati vengono recuperati dal repository ufficiale della Protezione Civile disponibile al seguente URL: https://github.com/pcm-dpc/COVID-19 dove vengono riportati i dati forniti dal Ministero della Salute Italiana.
        L\'aggiornamento di tali dati avviene ogni giorno intorno alle ore 18:30 (ora italiana).
        \n\nIl codice sorgente dell\'applicativo è disponibile sotto licenza OpenSource \'MIT\' al seguente URL: https://github.com/SimoneTinella/Stato_COVID19_Italia_Android
    </string>
    <string name="changelog">Changelog</string>
    <string name="contatta">Contatta lo sviluppatore</string>
    <string name="impostazioni">Cambia tema</string>
    <string name="no_changelog">Non è stato possibile recuperare il Changelog.</string>
    <string name="oggetto">Applicazione Android</string>
    <string name="ver_installata">Versione installata %s</string>

    <string name="indietro">indietro</string>
    <string name="cambia_misura">cambia misura</string>
    <string name="cambia_misura_ridotto">misure</string>
    <string name="barre_provinciale">province</string>
    <string name="avanti">avanti</string>
    <string name="misure_da_visualizzare">Elenco Misure</string>
    <string name="sel_tutto">Sel. tutto</string>
    <string name="desel_tutto">Desel. tutto</string>
    <string name="andamento_placeholder">Andamento Nazionale</string>
    <string name="nessun_dato_disponibile">Nessun dato disponibile</string>
    <string name="sel_misura">Seleziona misura</string>
    <string name="sel_dataContext">Seleziona contesto dati</string>
    <string name="sel_dataContext_sub">Seleziona sotto-contesto dati</string>
    <string name="no_data_to_display">Non sono presenti dati da graficare, prova ad aggiornare.</string>
    <string name="app_update">Aggiornamento applicazione</string>
    <string name="app_update_message">Stai usando una versione non aggiornata dell\'applicazione.\nSei indietro di %s.\n\nVersione installata: %s\nUltima versione: %s</string>
    <string name="si">Si</string>
    <string name="aggiorna">Aggiorna</string>
    <string name="chiudi">Chiudi</string>
    <string name="no">No</string>
    <string name="app_preview">Hai una versione preview dell\'App</string>
    <string name="no_connection">Il dispositivo non ha accesso ad Internet, attiva la connessione e riprova.</string>
    <string name="wait_pls">Recupero dati ultimi 365 giorni…</string>
    <string name="wait_full">Recupero dati da inizio pandemia…</string>
    <string name="wait_local_pls">Controllo validità dati in cache…</string>
    <string name="versione">versione</string>
    <string name="versioni">versioni</string>
    <string name="dati_relativi_al">Dati del %s</string>
    <string name="seleziona_almeno_un_elem">Seleziona almeno un elemento</string>
    <string name="limite_selezione">Puoi selezionare un minimo di %d province e un massimo di %d.</string>
    <string name="variazioni_giorno_prec">Variazioni con il giorno precedente</string>
    <string name="andamento">Andamento %s</string>
    <string name="relativo_al">Relativo al %s</string>


    <string name="dataset_nazionale">https://statocovidappitalia.azurewebsites.net/Dati/Nazionali</string>
    <string name="dataset_regionale">https://statocovidappitalia.azurewebsites.net/Dati/Regionali</string>
    <string name="dataset_provinciale">https://statocovidappitalia.azurewebsites.net/Dati/Provinciali</string>
    <string name="counter">https://statocovidappitalia.azurewebsites.net/Dati/Counter</string>
    <string name="dataset_avvisi">https://raw.githubusercontent.com/pcm-dpc/COVID-19/master/dati-json/dpc-covid19-ita-note.json</string>
    <string name="dataset_vaccini">https://raw.githubusercontent.com/italia/covid19-opendata-vaccini/master/dati/somministrazioni-vaccini-latest.json</string>
    <string name="api_key">RBWo5zHEtZkV1x6eTCZZs11tND0MiUd1</string>

    <string name="notification_file">https://raw.githubusercontent.com/SimoneTinella/Stato_COVID19_Italia_Android/master/notification.json</string>
    <string name="new_version_app_site">https://raw.githubusercontent.com/SimoneTinella/Stato_COVID19_Italia_Android/master/StatoCovid19Italia.apk</string>

    <string name="grafico_temporale">Grafico Temporale</string>
    <string name="andamento_regionale">Andamento Regionale</string>
    <string name="confronto_regionale">Confronto Regionale</string>
    <string name="confronto_regionale_message">Vuoi visualizzare il confronto Regionale di questa misura relativa al %s?</string>
    <string name="scarica_dati_completi">Scarica dati da inizio pandemia</string>

    <string name="dimessi_guariti_desc">Totale persone dimesse guarite dall\'inizio.</string>
    <string name="deceduti_desc">Totale persone decedute dall\'inizio.</string>
    <string name="totale_casi_desc">Totale persone che hanno contratto il virus dall\'inizio.</string>
    <string name="totale_attualmente_positivi_desc">Totale persone che attualmente hanno il virus.\n(Tot. Persone Ricoverate + Isolamento Domiciliare)</string>
    <string name="nuovi_attualmente_positivi_desc">È la misura spesso diffusa erroneamente dai media, ma non rappresenta i nuovi contagiati ma bensì la differenza della misura Totale Attualmente Positivi. È un netto fra i nuovi positivi e i nuovi guariti/deceduti.\n(Nuovi Positivi - Nuovi Guariti - Nuovi Deceduti)</string>
    <string name="totale_ospedalizzati_desc">Persone attualmente ricoverate.\n(Terapia Intensiva + Ricoverati Con Sintomi)</string>
    <string name="terapia_intensiva_desc">Persone ricoverate in terapia intensiva.</string>
    <string name="ricoverati_con_sintomi_desc">Persone ricoverate non in terapia intensiva.</string>
    <string name="isolamento_domiciliare_desc">Persone in isolamente domiciliare.</string>
    <string name="tamponi_desc">Totale tamponi effettuati dall\'inizio. (Incluse le ripetizioni sugli stessi individui)</string>
    <string name="casi_testati_desc">Totale persone distinte su cui è stato effettuato almeno un tampone. (Non include ripetizioni)</string>
    <string name="casi_da_sospetto_diagnostico_desc">Casi positivi identificati dal sospetto diagnostico</string>
    <string name="casi_da_screening_desc">Casi positivi che sono stati identificati attraverso attività di screening</string>
    <string name="c_nuovi_positivi_desc">Rappresenta il reale numero di nuove persone contagiate.</string>
    <string name="c_nuovi_dimessi_guariti_desc">Numero di nuove persone dimesse.</string>
    <string name="c_nuovi_deceduti_desc">Numero di nuove persone decedute.</string>
    <string name="c_nuovi_tamponi_name_desc">Numero di nuovi Tamponi Effettuati in giornata</string>
    <string name="c_rapporto_positivi_tamponi_desc">Rapporto in percentuale tra il numero di nuovi positivi e il numero dei nuovi tamponi giornalieri</string>
    <string name="ingressi_ter_int_desc">Nuovi ingressi in terapia intensiva</string>
    <string name="tot_pos_test_molecolare_desc">Numero Totale di Positivi a seguito di Test Molecolare</string>
    <string name="tot_pos_test_rapido_desc">Numero Totale di Positivi a seguito di Test Antigenico Rapido</string>
    <string name="tamponi_test_molecolare_desc">Numero Totale di Tamponi Molecolari eseguiti</string>
    <string name="tamponi_test_rapido_desc">Numero Totale di Test Antigenici Rapidi eseguiti</string>

    <string name="dimessi_guariti_name">Tot. Dimessi Guariti</string>
    <string name="deceduti_name">Tot. Deceduti</string>
    <string name="totale_casi_name">Tot. Casi</string>
    <string name="totale_attualmente_positivi_name">Tot. Attualmente Positivi</string>
    <string name="nuovi_attualmente_positivi_name">Nuovi Positivi Attivi</string>
    <string name="totale_ospedalizzati_name">Tot. Persone Ricoverate</string>
    <string name="terapia_intensiva_name">Terapia Intensiva</string>
    <string name="ricoverati_con_sintomi_name">Ricoverati Con Sintomi</string>
    <string name="isolamento_domiciliare_name">Isolamento Domiciliare</string>
    <string name="tamponi_name">Tot. Tamponi Effettuati</string>
    <string name="c_nuovi_tamponi_name">Nuovi Tamponi Effettuati</string>
    <string name="c_rapporto_positivi_tamponi">Rapporto N. Pos./N. Tamp.</string>
    <string name="c_nuovi_positivi_name">Nuovi Positivi</string>
    <string name="c_nuovi_dimessi_guariti_name">Nuovi Dimessi Guariti</string>
    <string name="c_nuovi_deceduti_name">Nuovi Deceduti</string>
    <string name="province_da_visualizzare">Elenco Province</string>
    <string name="ordinamento">Ordinamento</string>
    <string name="val_giorno_prima">Valore precedente</string>
    <string name="var_perc_giorno_prima">Variazione %</string>
    <string name="var_giorno_prima">Variazione numerica</string>
    <string name="visualizza_avviso">Visualizza Avviso</string>
    <string name="dati_cache">Dati recuperati dalla cache</string>
    <string name="tot_pos_test_molecolare">Tot. Positivi Test Molecolare</string>
    <string name="tot_pos_test_rapido">Tot. Positivi Test Rapido</string>
    <string name="tamponi_test_molecolare">Tamponi Test Molecolare</string>
    <string name="tamponi_test_rapido">Tamponi Test Rapido</string>

</resources>
